update swagger and add tests
