# app/Http/Resources/PostResource.php
@@ -20,7 +20,7 @@ class PostResource extends JsonResource
      *     @OA\Property(
      *       property="comments",
      *       type="array",
-     *       @OA\Items(ref="#/components/schemas/resources.post.comments")
+     *       @OA\Items(ref="#/components/schemas/CommentResource")
      *     ),
      *     @OA\Property(property="created_at", type="string", format="date-time", example="2023-11-05 06:11", description="дата создания"),
      *     @OA\Property(property="update_at", type="string", format="date-time", example="2023-11-05 08:22", description="дата обновления"),
@@ -40,7 +40,7 @@ class PostResource extends JsonResource
             'user_id' => $this->user_id,
             'comments_count' => $this->comments_count,
             'comments' => $this->when($request->routeIs('posts.show'), function () {
-                return CommentResource::collection($this->comments()->latest()->limit(2)->get());
+                return $this->comments;
             }),
             'created_at' => $this->created_at->format('Y-m-d H:m'),
             'updated_at' => $this->updated_at->format('Y-m-d H:m'),
